--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,20 @@
-<p>grafica1 works!</p>
+<div class="row">
+    <div class="col-6">
+     <app-dona></app-dona>
+    </div>
+    <div class="col-6">
+      <app-dona   
+       [labels] ="labels1"
+       [data] ="data1"
+       title="ventas" 
+       ></app-dona>
+   </div>
+</div>
+<div class="row">
+  <div class="col-6">
+    <app-dona title="Ingresos"></app-dona>
+  </div>
+  <div class="col-6">
+    <app-dona title="Ganancias"></app-dona>
+ </div>
+</div>
