--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -11,6 +11,17 @@
   
          <!--Mis Sistemas de Rutas-->
          <router-outlet></router-outlet>
+         
+         <!-- <div class="row">
+          <div class="col-12">
+              <div class="card">
+                  <div class="card-body">
+                      
+      
+                  </div>
+              </div>
+          </div>
+      </div> -->
   
             <!-- ============================================================== -->
                   <!-- Start Page Content -->
