--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -31,7 +31,8 @@
                     </a>
                     <ul aria-expanded="false" class="collapse" >
                         <li *ngFor="let subitem of item.submenu">
-                            <a [routerLink]="subitem.url">{{subitem.titulo}}                                 
+                            <a [routerLink]="subitem.url" 
+                             routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">{{subitem.titulo}}                                 
                             </a>
                         </li>
                        
